CR.CyberRepublic/front-end/src/module/page/CVote/list/style.scss
@import "@/style/variable";
@import "@/style/color";

.p-cvote-list{
  text-align: center;
  margin: 50px 108px 80px 108px;
  
  .title {
    font-size: 96px;
    text-align: left;
  }
  .d_box {
    // padding: 0 50px 80px;
    // width: 80vw;
    // margin: 80px auto 0;
    background: #ffffff;
  }
  .header {
    display: flex;
    align-items: center;
    margin-bottom: 10px;
  }
  .vote-status-list {
    display: flex;
    align-items: center;
    font-size: 14px;
  }
  .vote-status-item {
    flex: 0 0 10px;
    height: 10px;
    box-sizing: border-box;
    margin-right: 2px;
    margin-left: 10px;

    &.undecided {
      background: #EFEFEF;
    }
    &.abstained {
      background: #CED6E3;
    }
    &.yes {
      margin-left: 0;
      background: $cr_primary_highlight;
    }
    &.no {
      background: #BE1313;
    }
  }
}

